// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactForm should render 1`] = `
<DocumentFragment>
  <form
    class="space-y-5"
    data-testid="contact-form"
  >
    <fieldset
      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="name"
      >
        Name
      </label>
      <div
        class="fixed invisible w-auto whitespace-nowrap"
      >
        …
      </div>
      <div
        class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
      >
        <div
          class="flex relative flex-1 h-full"
        >
          <input
            class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
            data-testid="contact-form__name-input"
            name="name"
            value=""
          />
        </div>
      </div>
    </fieldset>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 eXUJzU"
    >
      <fieldset
        class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="network"
        >
          Cryptoasset
        </label>
        <div
          class="relative w-full"
        >
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            …
          </div>
          <div
            class="sr-only Input__InputWrapperStyled-wu99qs-0 jYUFQr"
          >
            <div
              class="flex relative flex-1 h-full"
            >
              <input
                class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                data-testid="select-list__input"
                name="network"
                readonly=""
                tabindex="-1"
                value=""
              />
            </div>
          </div>
          <div
            class="relative w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="downshift-0-menu"
              role="combobox"
            >
              <label
                for="downshift-0-input"
                id="downshift-0-label"
              />
              <div
                class="fixed invisible w-auto whitespace-nowrap"
              >
                …
              </div>
              <div
                class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
              >
                <div
                  class="flex relative flex-1 h-full"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="downshift-0-menu"
                    aria-labelledby="downshift-0-label"
                    autocomplete="off"
                    class="p-0 w-full bg-transparent border-none cursor-default focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                    data-testid="SelectDropdown__input"
                    id="downshift-0-input"
                    name="network"
                    placeholder="Enter a cryptoasset name"
                    value=""
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex justify-center items-center py-2 px-1"
                      data-testid="SelectDropdown__caret"
                    >
                      <div
                        class="transition-transform sc-bdfBwQ gLRWTb text-theme-secondary-500"
                        height="5"
                        width="7"
                      >
                        <svg>
                          caret-down.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <ul
                aria-labelledby="downshift-0-label"
                class="styles__SelectOptionsList-b2falt-0 dyOwRR"
                id="downshift-0-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
        data-testid="ContactForm__address"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Address
        </label>
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          …
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
              data-testid="contact-form__address-input"
              name="address"
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
      <div
        class="mt-4"
      >
        <button
          class="w-full OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
          data-testid="contact-form__add-address-btn"
          disabled=""
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Add Address
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex justify-end pt-8 w-full border-t border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="space-x-3"
      >
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
          data-testid="contact-form__cancel-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Cancel
          </div>
        </button>
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
          data-testid="contact-form__save-btn"
          disabled=""
          type="submit"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Save
          </div>
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ContactForm should render with errors 1`] = `
<DocumentFragment>
  <form
    class="space-y-5"
    data-testid="contact-form"
  >
    <fieldset
      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 qzrKg"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="name"
      >
        Name
      </label>
      <div
        class="fixed invisible w-auto whitespace-nowrap"
      >
        …
      </div>
      <div
        class="Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
      >
        <div
          class="flex relative flex-1 h-full"
        >
          <input
            aria-invalid="true"
            class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
            data-testid="contact-form__name-input"
            name="name"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-danger-500 dark:divide-theme-secondary-800"
        >
          <span
            data-errortext="Contact name error"
            data-testid="Input__error"
          >
            <div
              class="sc-bdfBwQ iyevwF text-theme-danger-500"
              height="20"
              width="20"
            >
              <svg>
                alert-warning.svg
              </svg>
            </div>
          </span>
        </div>
      </div>
    </fieldset>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 eXUJzU"
    >
      <fieldset
        class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="network"
        >
          Cryptoasset
        </label>
        <div
          class="relative w-full"
        >
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            …
          </div>
          <div
            class="sr-only Input__InputWrapperStyled-wu99qs-0 jYUFQr"
          >
            <div
              class="flex relative flex-1 h-full"
            >
              <input
                class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                data-testid="select-list__input"
                name="network"
                readonly=""
                tabindex="-1"
                value=""
              />
            </div>
          </div>
          <div
            class="relative w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="downshift-3-menu"
              role="combobox"
            >
              <label
                for="downshift-3-input"
                id="downshift-3-label"
              />
              <div
                class="fixed invisible w-auto whitespace-nowrap"
              >
                …
              </div>
              <div
                class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
              >
                <div
                  class="flex relative flex-1 h-full"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="downshift-3-menu"
                    aria-labelledby="downshift-3-label"
                    autocomplete="off"
                    class="p-0 w-full bg-transparent border-none cursor-default focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                    data-testid="SelectDropdown__input"
                    id="downshift-3-input"
                    name="network"
                    placeholder="Enter a cryptoasset name"
                    value=""
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex justify-center items-center py-2 px-1"
                      data-testid="SelectDropdown__caret"
                    >
                      <div
                        class="transition-transform sc-bdfBwQ gLRWTb text-theme-secondary-500"
                        height="5"
                        width="7"
                      >
                        <svg>
                          caret-down.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <ul
                aria-labelledby="downshift-3-label"
                class="styles__SelectOptionsList-b2falt-0 dyOwRR"
                id="downshift-3-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
        data-testid="ContactForm__address"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Address
        </label>
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          …
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
              data-testid="contact-form__address-input"
              name="address"
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
      <div
        class="mt-4"
      >
        <button
          class="w-full OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
          data-testid="contact-form__add-address-btn"
          disabled=""
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Add Address
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex justify-end pt-8 w-full border-t border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="space-x-3"
      >
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
          data-testid="contact-form__cancel-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Cancel
          </div>
        </button>
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
          data-testid="contact-form__save-btn"
          disabled=""
          type="submit"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Save
          </div>
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
